# agefit

./: .gitignore  README.md  README.rst  environment.yaml  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.rst  installation.rst  reference.rst  requirements.txt  tutorials.rst
src/agefit/: __init__.py  _agefit.py
src/agefit/backend/: __init__.py  _backend.py  _spectroscopy.py
src/agefit/ui/: __init__.py  parambox.py
tests/: test_nothing.py
