[metadata]
name = exp4-agefit
version = attr: agefit.__version__
author = Adrian Peter Krone
author_email = adrian.krone@physik.uni-kassel.de
description = Fitting GUI for AGE Typical Datasets
long_description = file: README.rst
long_description_content_type = text/x-rst
license = "MIT"
license_files = file: LICENSE
project_urls =
    docs=https://exp4-agefit.readthedocs.io/en/latest/,
    GitHub=https://github.com/exp4-age/agefit
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    matplotlib >= 3.7
    numpy >= 1.21
    scipy >= 1.11
    exp4-agepy >= 0.2
    h5py
    pandas
    PyQt6
    iminuit
    numba-stats
    jacobi
    jax
    resample
    lmfit

[options.entry_points]
gui_scripts =
    agefit = agefit:start

[options.packages.find]
where = src
